--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+debug = "flask run --debug"
 [packages]
 flask = "*"
 
