--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FLASK_APP = main.py
 
 KINDO_AI_API_KEY = "63dbcd23-c497-4d5e-8746-17afb898fa42-669f413306a7804f"
+DATABASE_URL = "sqlite:///db.sqlite3"
