--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-debug = "flask run --debug"
+debug = "flask run -h localhost -p 8000 --debug --reload"
 [packages]
 flask = "*"
 
