--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-debug = "flask run -h localhost -p 8000 --debug --reload"
+debug = "flask run -h localhost -p 6900 --debug --reload --host 0.0.0.0"
 
 [packages]
 flask = "*"
 requests = "*"
 
+
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10.12"
