--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ debug = "flask run -h localhost -p 8000 --debug --reload"
 [packages]
 flask = "*"
 requests = "*"
+flask-mail = "*"
+pytracking = "*"
 
 [dev-packages]
 
